Fix scrollbar width

--- a/src/Components/SideBar/styles.module.scss
+++ b/src/Components/SideBar/styles.module.scss
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -14,7 +14,7 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background: #a4a8ac;
-  border-radius: 6px;
+  border-radius: 3px;
 }
 
 .sideBar {
